[package]
name = "clonelicious"
version = "2.0.3"
edition = "2024"
authors = ["root@ltpp.vip"] 
license = "MIT"
description = """A Rust macro library that simplifies cloning and closure execution. The `clone!` macro automatically clones variables and immediately executes the closure with the cloned values, streamlining common patterns in Rust programming."""
keywords = ["standard", "macro", "extensions", "structures", "simplifying"]
repository = "https://github.com/eastspire/clonelicious"
categories = ["data-structures", "development-tools"]
exclude = [
    "target",
    "Cargo.lock",
    "sh",
    ".github"
]

[dev-dependencies]
tokio = { version = "1.45.0", features = ["full"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
